[project]
name = "code_generator"
version = "0.1.0"
description = "code_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0"
]

[project.scripts]
code_generator = "code_generator.main:run"
run_crew = "code_generator.main:run"
train = "code_generator.main:train"
replay = "code_generator.main:replay"
test = "code_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
